--- a/public/assets/themebasic/css/style.css
+++ b/public/assets/themebasic/css/style.css
@@ -62,6 +62,10 @@ CISTIWARE - SOLUCIONES TECNOLOGICAS
   border: 2px solid #2b4cadf
 }
 
+@font-face {
+  font-family: 'Rubik';
+  src: URL('../fonts/Rubik-Regular.ttf');
+}
 /*----------------------------------------*/
 /*  1.  Theme default CSS
 /*----------------------------------------*/
@@ -79,7 +83,7 @@ p {margin: 0 0 15px;}
 h1, h2, h3, h4, h5, h6 {
     margin: 0 0 10px;
     color: inherit;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Rubik','Raleway', sans-serif;
     font-weight: 500;
     line-height: 1.1;
 }
@@ -103,7 +107,7 @@ ul {
 }
 body {
     color: #333;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik','Roboto', sans-serif;
     font-size: 13px;
     font-weight: 400;
     text-align: left;
@@ -327,7 +331,7 @@ a.top-language:focus,a.top-currency:focus {color: #fff;
   z-index: 99;
 }
 #btn-search-category::before {
-  border-right: 70px solid transparent;
+  /*border-right: 70px solid transparent;*/
   border-top: 70px solid #fff;
   content: "";
   height: 0;
@@ -938,7 +942,9 @@ a.shop-n.saleup-button:hover,.home-1 .layer-2-4 a.shop-n:hover, .home-1 .layer-1
 }
 .single-banner.banner-m-b { margin-bottom: 30px;
 }
-.single-banner a img {  display: block;
+.single-banner a img {  
+  display: block;
+  border-radius: 1rem;
 }
 .single-banner a { position: relative;
     display: block;
@@ -1169,8 +1175,13 @@ a.shop-n.saleup-button:hover,.home-1 .layer-2-4 a.shop-n:hover, .home-1 .layer-1
     top: 0;
     left: 15px;
 }
-.product-img-wrap {position: relative;
+.product-img-wrap {
+  position: relative;
 	overflow: hidden;
+  border: 2px solid #0a841f;
+  border-radius: 1rem;
+  box-shadow: 6px 3px 5px grey;
+
 }
 .sold-text { background: #2b4cadf none repeat scroll 0 0;
   border-radius: 100%;
@@ -1300,8 +1311,9 @@ a.shop-n.saleup-button:hover,.home-1 .layer-2-4 a.shop-n:hover, .home-1 .layer-1
   -webkit-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
 }
-a h3.pro-name { font-size: 20px;
-    line-height: 20px;
+a h3.pro-name { 
+    font-size: 15px;
+    line-height: 15px;
     margin: 0;
     font-weight: 700;
     padding: 18px 0 10px;
